@@ -1,4 +1,4 @@
-EXTRA_DIST = \
+MSVSCPP_FILES = \
 	libcerror/libcerror.vcproj \
 	libclocale/libclocale.vcproj \
 	libcpath_dll/libcpath_dll.vcproj \
@@ -6,6 +6,18 @@ EXTRA_DIST = \
 	libcstring/libcstring.vcproj \
 	libuna/libuna.vcproj \
 	libcpath.sln
+
+SCRIPT_FILES = \
+	scripts/vs2008_x64.sh \
+	scripts/vs2008_x64_sln.sed \
+	scripts/vs2008_x64_vcproj.sed \
+	scripts/vs2010_x64.sh \
+	scripts/vs2010_x64_sln.sed \
+	scripts/vs2010_x64_vcxproj.sed
+
+EXTRA_DIST = \
+	$(MSVSCPP_FILES) \
+	$(SCRIPT_FILES)
 
 MAINTAINERCLEANFILES = \
 	Makefile.in
