@@ -13,6 +13,12 @@ TODO
 * add tests
 * add borlandc5 and codegear files
 
+20130113
+* updated msvscpp files
+
+20130103
+* 2013 update
+
 20121225
 * added .gitignore
 * added msvscpp files
